crates/pixi_manifest/src/manifests/snapshots/pixi_manifest__manifests__document__test__add_activation_scripts_creates_table.snap
---
source: crates/pixi_manifest/src/manifests/document.rs
expression: document.to_string()
---

[project]
name = "test"
channels = []
platforms = []

[activation]
scripts = ["setup.sh", "extra.sh"]
