crates/pixi_manifest/src/manifests/snapshots/pixi_manifest__manifests__document__test__add_activation_scripts_with_feature_and_target.snap
---
source: crates/pixi_manifest/src/manifests/document.rs
expression: document.to_string()
---

[project]
name = "test"
channels = []
platforms = []

[feature.cuda.target."cuda-*".activation]
scripts = ["cuda.sh"]

[target.unix.activation]
scripts = ["posix.sh"]
