crates/pixi_manifest/src/manifests/snapshots/pixi_manifest__manifests__document__test__add_activation_to_environment_feature.snap
---
source: crates/pixi_manifest/src/manifests/document.rs
expression: document.to_string()
---
[workspace]
channels = []
name = "test"
platforms = []

[environments]
dev = { features = [] , activation.env.FOO = "bar" }
