crates/pixi_manifest/src/manifests/snapshots/pixi_manifest__manifests__document__test__add_activation_to_pyproject.snap
---
source: crates/pixi_manifest/src/manifests/document.rs
expression: document.to_string()
---

[project]
name = "test"
[tool.pixi.workspace]
channels = []
platforms = []

[tool.pixi.activation]
scripts = ["setup.sh"]

[tool.pixi.feature.dev.target.linux-64.activation.env]
FOO = "bar"
