crates/pixi_manifest/src/manifests/snapshots/pixi_manifest__manifests__document__test__add_dependency_preserves_multiline_inline_table.snap
---
source: crates/pixi_manifest/src/manifests/document.rs
expression: document.to_string()
---
[workspace]
name = "test"
channels = []
platforms = []

[feature.test]
dependencies = {
    numpy = "*",
    scipy = ">=1.0",
    pandas = ">=2.0",
}
