crates/pixi_manifest/src/manifests/snapshots/pixi_manifest__manifests__document__test__add_dependency_retains_decoration.snap
---
source: crates/pixi_manifest/src/manifests/document.rs
expression: document.to_string()
---
[project]
name = "test"

[tool.pixi.workspace]
channels = []
platforms = []

[tool.pixi.dependencies]
# Hello world!
hTTPx = "0.1.*" # Some comment.

# newline
