crates/pixi_manifest/src/manifests/snapshots/pixi_manifest__manifests__document__test__add_dependency_update_in_multiline_inline_table.snap
---
source: crates/pixi_manifest/src/manifests/document.rs
expression: document.to_string()
---
[workspace]
name = "test"
channels = []
platforms = []

[feature.test]
dependencies = {
    numpy = ">=2.0",
    scipy = ">=1.0",
}
