crates/pixi_manifest/src/manifests/snapshots/pixi_manifest__manifests__document__test__add_pypi_dependency_creates_dependency_groups_when_no_existing_table.snap
---
source: crates/pixi_manifest/src/manifests/document.rs
expression: result
---
[project]
name = "test"

[tool.pixi.workspace]
channels = []
platforms = []

[dependency-groups]
cuda = [
    "numpy>=1.20.0",
]
