crates/pixi_manifest/src/manifests/snapshots/pixi_manifest__manifests__document__test__add_pypi_dependency_retains_decoration.snap
---
source: crates/pixi_manifest/src/manifests/document.rs
expression: document.to_string()
---
[project]
name = "test"
dependencies = [
    # Main dependency comment
    "requests>=2.30.0", # inline comment
]

[project.optional-dependencies]
dev = [
    # Dev dependency comment
    "pyyaml>=6.1.0", # dev inline comment
]

[tool.pixi.workspace]
channels = []
platforms = []

[tool.pixi.pypi-dependencies]
# Table dependency comment
NumPy = ">=1.21.0" # table inline comment
