crates/pixi_manifest/src/manifests/snapshots/pixi_manifest__manifests__document__test__add_pypi_dependency_reuse_feature_preserves_multiline.snap
---
source: crates/pixi_manifest/src/manifests/document.rs
expression: document.to_string()
---
[project]
name = "test"

[tool.pixi.workspace]
channels = []
platforms = []

[tool.pixi.feature.cuda]
pypi-dependencies = {
    torch = ">=2.0.0",
    jax = ">=0.4",
    numpy = ">=1.20.0",
}
